# sports-odds-edge-analyzer

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
docs/: README.md
docs/guides/: app-walkthrough.md  deployment.md  getting-started.md  screenshot-gallery.md
sports_trading/: __init__.py  backtest.py  edge.py  evaluation.py  market_data.py  models.py  odds.py
tests/: __init__.py  test_backtest.py  test_edge.py  test_evaluation.py  test_market_data.py  test_models.py  test_odds.py
